# clay_raylib_template

./: CMakeLists.txt  readme.md
src/: main.c
